test/e2e/features/rate_limit/quota/testdata/rlqs-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: rlqs
  namespace: kgateway-base
spec:
  selector:
    app.kubernetes.io/name: rlqs
  ports:
  - name: grpc
    port: 18081
    targetPort: grpc
    appProtocol: kubernetes.io/h2c
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rlqs
  namespace: kgateway-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rlqs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rlqs
    spec:
      containers:
      - name: rlqs
        image: ghcr.io/kgateway-dev/rlqs-server:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: grpc
          containerPort: 18081
        readinessProbe:
          grpc:
            port: 18081
          periodSeconds: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 64Mi
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayExtension
metadata:
  name: rlqs
  namespace: kgateway-base
spec:
  type: RateLimitQuota
  rateLimitQuota:
    grpcService:
      backendRef:
        name: rlqs
        port: 18081
    domain: e2e
